journal.ctx_TXT/main--ThinkPad_x395--v3_(manjaro)--network--shitty_iptables_rules_203.txt
##### shitty iptables rules
udp   ESTAB  0       0                                           192.168.1.72%wlp3s0:
bootpc                                              192.168.1.1:bootps                
tcp   ESTAB  0       0                                                  192.168.1.72:
50806                                             34.107.243.93:https                 
tcp   ESTAB  0       0                                                  192.168.1.72:
53576                                             140.82.114.25:https                 
tcp   ESTAB  0       0                                                  192.168.1.72:
35766                                             34.107.221.82:http                  
tcp   ESTAB  0       0                                                  192.168.1.72:
34920                                            34.149.100.209:https                 
tcp   ESTAB  0       0                                                  192.168.1.72:
35764                                             34.107.221.82:http                  
tcp   ESTAB  0       0                      [2a02:8428:2409:6701:5550:86eb:396d:546]:
48664                                      [2600:1901:0:38d7::]:http                  
tcp   ESTAB  0       0                      [2a02:8428:2409:6701:5550:86eb:396d:546]:
54882                                   [2a02:ec80:600:ed1a::1]:https                 
 
presk0@ordi-241025-22:53:25-~/minishell42 
=> sudo iptables-save 
[sudo] password for presk0:  
# Generated by iptables-save v1.8.10 on Fri Oct 25 22:54:05 2024 
*nat 
:PREROUTING ACCEPT [404:58405] 
:INPUT ACCEPT [384:51805] 
:OUTPUT ACCEPT [6888:473257] 
:POSTROUTING ACCEPT [6888:473257] 
:DOCKER - [0:0] 
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER 
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER 
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE 
-A POSTROUTING -s 172.18.0.0/16 ! -o br-ebb94ae6c3bb -j MASQUERADE 
-A DOCKER -i docker0 -j RETURN 
-A DOCKER -i br-ebb94ae6c3bb -j RETURN 
COMMIT 
# Completed on Fri Oct 25 22:54:05 2024 
# Generated by iptables-save v1.8.10 on Fri Oct 25 22:54:05 2024 
*filter 
:INPUT ACCEPT [52528:54017680] 
:FORWARD DROP [0:0] 
:OUTPUT ACCEPT [47857:7530929] 
:DOCKER - [0:0] 
:DOCKER-ISOLATION-STAGE-1 - [0:0] 
:DOCKER-ISOLATION-STAGE-2 - [0:0] 
:DOCKER-USER - [0:0] 
-A FORWARD -j DOCKER-USER 
-A FORWARD -j DOCKER-ISOLATION-STAGE-1 
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -o docker0 -j DOCKER 
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT 
-A FORWARD -i docker0 -o docker0 -j ACCEPT 
-A FORWARD -o br-ebb94ae6c3bb -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -o br-ebb94ae6c3bb -j DOCKER 
-A FORWARD -i br-ebb94ae6c3bb ! -o br-ebb94ae6c3bb -j ACCEPT 
-A FORWARD -i br-ebb94ae6c3bb -o br-ebb94ae6c3bb -j ACCEPT 
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2 
-A DOCKER-ISOLATION-STAGE-1 -i br-ebb94ae6c3bb ! -o br-ebb94ae6c3bb -j DOCKER-ISOLATI
ON-STAGE-2 
-A DOCKER-ISOLATION-STAGE-1 -j RETURN 
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP 
-A DOCKER-ISOLATION-STAGE-2 -o br-ebb94ae6c3bb -j DROP 
-A DOCKER-ISOLATION-STAGE-2 -j RETURN 
-A DOCKER-USER -j RETURN 
COMMIT 
# Completed on Fri Oct 25 22:54:05 2024
